Update 2-07-2025