@@ -7,7 +7,6 @@ import org.springframework.web.multipart.MultipartFile;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.UUID;
 
@@ -20,7 +19,7 @@ public class FileStorageService {
     public String storeFile(MultipartFile file) {
         try {
             // Crear directorio si no existe
-            Path uploadPath = Paths.get(uploadDir);
+            Path uploadPath = Path.of(uploadDir);
             if (!Files.exists(uploadPath)) {
                 Files.createDirectories(uploadPath);
             }
